Fix various small color, padding & alignment issues

--- a/web/src/modules/Home/pages/Main/PackageList/ResultTable/styles.less
+++ b/web/src/modules/Home/pages/Main/PackageList/ResultTable/styles.less
@@ -11,6 +11,10 @@
     color: white;
   }
 
+  :global(.ant-list-item-meta):last-child {
+    margin-bottom: 0;
+  }
+
   .alternate {
     background-color: #f8f8f8;
   }
