--- a/web/src/modules/Package/pages/ChannelDetail/styles.less
+++ b/web/src/modules/Package/pages/ChannelDetail/styles.less
@@ -44,6 +44,7 @@
     color: @primary-color;
     font-size: @size;
     margin-right: 8px;
+    flex: 1;
 
     &:hover {
       color: @primary-color-dark;
