--- a/web/src/modules/Package/pages/PackageDetail/styles.less
+++ b/web/src/modules/Package/pages/PackageDetail/styles.less
@@ -16,6 +16,10 @@
       }
     }
 
+    :global(.ant-tabs-tab>.ant-tabs-tab-btn) {
+      color: inherit;
+    }
+
     :global(.ant-tabs-tab-active) {
       color: white;
       background-color: @primary-color;
